add lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,24 @@
     <body>
         <h1>Lasagna</h1>
         <img src="../img/lasagna.jpg">
+        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound sweet italian sausage</li>
+            <li>3/4 pound lean ground beef</li>
+            <li>1/2 vup minced onion</li>
+            <li>2 cloves garlic</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>2 (6.5 ounce) can canned tomato sauce</li>
+            <li>some more stuff</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>cook meat</li>
+            <li>cook lasagna noodles</li>
+            <li>assemble lasagna</li>
+            <li>bake in oven</li>
+        </ol>
+        
     </body>
 </html>
