--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -26,6 +26,6 @@
             <li>assemble lasagna</li>
             <li>bake in oven</li>
         </ol>
-        
+        <a href="../index.html">Homepage</a>
     </body>
 </html>
